fix icon vs button size on safari

--- a/bloomen-wallet-app/src/components/network-status-alert/network-status-alert.component.scss
+++ b/bloomen-wallet-app/src/components/network-status-alert/network-status-alert.component.scss
@@ -19,8 +19,10 @@
   &> button {        
     align-self: flex-end; 
     margin-right: 16px;      
+    height: 56px;
+    width: 56px;
     .mat-icon { 
-      font-size: 48px;
+      font-size: 36px;
     }
   }  
 }
